@@ -1,3 +1,11 @@
+2018-02-28  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/84617
+	* g++.dg/ext/attr-malloc-3.C: New test.
+	* g++.dg/ext/attr-const.C: Adjust.  Xfail assertions failing due
+	to pre-existing problems.
+	* g++.dg/ext/attr-pure.C: Same.
+
 2018-02-28  Paul Thomas  <pault@gcc.gnu.org>
 
 	PR fortran/83901
