@@ -1,3 +1,9 @@
+2018-02-28  Martin Sebor  <msebor@redhat.com>
+
+	PR testsuite/84617
+	* decl.c (duplicate_decls): Fully merge attributes const, pure,
+	and malloc.
+
 2018-02-28  Nathan Sidwell  <nathan@acm.org>
 
 	PR c++/84602
